Concluindo segunda atividade

--- a/atv02/q1/index.html
+++ b/atv02/q1/index.html
@@ -5,18 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Lista de Tarefas</h1>
-    <form name="addTarefa">
-        <input name="name" type="text" placeholder="Nome">
-        <button name="adicionar" type="submit" disabled>Adicionar</button>
+    <h1>Maior e Menor</h1>
+    <form name="formulario">
+        <input name="numeros" type="text" placeholder="Digite os numeros">
+        <input name="separador" type="text" placeholder="Digite o separador">
+        <button>Achar</button>
     </form>
-    <div class="tarefas"><h3 id = "no-item">Lista de tarefas Vazia</h3></div>
 
-    <script src="./index.js"></script>
+    <span>Maior Número: - <br></span>
+    <span>Menor Número: -</span>
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
