--- a/atv02/q2/index.html
+++ b/atv02/q2/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JS</title>
-  </head>
-  <body>
-    <h1>Filmes</h1>
-    <input name="procurar" type="text" placeholder="Nome">
-    <div class="dataFilms">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+</head>
 
-    </div>
-    
-    <script src="index.js"></script>
-  </body>
+<body>
+    <h1>Lista de Tarefas</h1>
+    <form name="addTarefa">
+        <input name="name" type="text" placeholder="Nome">
+        <button name="adicionar" type="submit" disabled>Adicionar</button>
+    </form>
+    <div class="tarefas"><h3 id = "no-item">Lista de tarefas Vazia</h3></div>
+
+    <script src="./index.js"></script>
+</body>
+
 </html>
