Concertando entrada invalida de input na questão 2

--- a/atv03/q3/index.html
+++ b/atv03/q3/index.html
@@ -17,6 +17,7 @@
         </label>
         <button type="button" id="butao" disabled>Adicionar</button>
     </form>
+    <hr style="border-color: white; margin-top:20px">
     <table>
         <caption><h3>Balanço Geral</h3></caption>
         <thead>
